--- a/app/src/main/res/layout/item_joke.xml
+++ b/app/src/main/res/layout/item_joke.xml
@@ -17,6 +17,7 @@
             android:padding="10dp"
             android:text="@string/bottom_sheet_behavior"
             android:textColor="#808080"
-            android:textSize="14sp" />
+            android:lineSpacingMultiplier="1.5"
+            android:textSize="16sp" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
