--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -2,13 +2,11 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f3f3f3">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#f3f3f3">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
