--- a/app/src/main/res/layout/item_joke.xml
+++ b/app/src/main/res/layout/item_joke.xml
@@ -8,6 +8,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:layout_margin="5dp">
 
         <TextView
